# taxi-demand-forecast

./: ANALYSIS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: dataset_facts.md  dataset_profiling.md
examples/: run_pipeline.py
taxi_demand/: __init__.py  evaluate.py  features.py  loader.py  model.py  parallel.py  scraper.py  visualize.py  zones.py
tests/: test_audit_fixes.py  test_audit_round2.py  test_data_consistency.py  test_evaluate.py  test_evaluate_extras.py  test_features.py  test_features_extras.py  test_holidays.py  test_loader.py  test_loader_extras.py  test_model.py  test_model_extras.py  test_parallel.py  test_run_pipeline.py  test_scraper.py  test_visualize.py  test_zones.py
